# Neuro-Sings

./: .gitignore  Duplicates.md  Notes.md  README.md  Song List.md  TODO.md  config.toml  config.yml  pyproject.toml
data/: dates.csv  dates_v12.csv  songs.csv  songs.db  songs_new.json
images/: README.md
images/dates/: 2023-dates-months.kra  2023-dates-v12.kra  2023-dates.kra  2024-dates.kra  2025-dates.kra
neuro/: __init__.py  _shortcuts.py  checks.py  detection.py  file_tags.py  json_to_csv.py  new_batch.py  polars_utils.py  query.ipynb  run.py  song_detect.py  song_tags.py  thumbnails.py  utils.py
src/neuro/: checks.py  file_tags.py  json_to_csv.py  polars_utils.py  run.py  song_detect.py  thumbnails.py
