[project]
name = "Neuro-Songs"
version = "0.1.0"
description = "Formatting Neuro songs to be better in media players"
authors = [{ name = "Matthieu Basset", email = "bassetmatt@gmail.com" }]
dependencies = [
    "mutagen>=1.47.0",
    "pillow>=11.2.1",
    "loguru>=0.7.3",
    "polars>=1.30.0",
    "tqdm>=4.67.1",
    "pandas>=2.3.0",
    "sqlalchemy>=2.0.41",
    "pyarrow>=20.0.0",
    "connectorx>=0.4.3",
]
requires-python = ">=3.11, <3.13"
readme = "README.md"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]

[project.scripts] # Shortcuts, have a command for main run so that it emulates a "real" run
songs-generate = "src.neuro.run:generate_songs"
update-json = "src.neuro.run:new_batch_detection"
thumbnails-generate = "src.neuro.thumbnails:generate_main"
# thumbnails-old = "src.neuro.thumbnails:generate_oldge"
update-csv = "src.neuro.json_to_csv:update_csv"
db-check = "src.neuro.checks:all_tests"
set-includes = "src.neuro.run:standalone_set_includes"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = ["ipykernel>=6.29.5"]

[tool.ruff] # See https://github.com/astral-sh/ruff#configuration
line-length = 120
