[project]
name = "Neuro-Songs"
version = "0.1.0"
description = "Formatting Neuro songs to be better in media players"
authors = [{ name = "Matthieu Basset", email = "bassetmatt@gmail.com" }]
dependencies = [
    "connectorx>=0.4.3",
    "loguru>=0.7.3",
    "mutagen>=1.47.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
]
requires-python = ">=3.11, <3.13"
readme = "README.md"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]

[project.scripts] # Shortcuts, have a command for main run so that it emulates a "real" run
songs-generate = "neuro.run:generate_songs"
update-json = "neuro.run:new_batch_detection"
thumbnails-generate = "neuro.thumbnails:generate_main"
# thumbnails-old = "neuro.thumbnails:generate_oldge"
update-db = "neuro.json_to_csv:update_db"
db-check = "neuro.checks:all_tests"
drive-pull = "neuro._shortcuts:drive_pull"
drive-push = "neuro._shortcuts:drive_push"
db-sync = "neuro._shortcuts:dbs_sync"
mp3gain_standalone = "neuro.run:mp3gain_standalone"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = ["ipykernel>=6.29.5"]

[tool.ruff] # See https://github.com/astral-sh/ruff#configuration
line-length = 120
